--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  margin :0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,25 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media screen and (max-width:1200px) {
+  .App{
+    min-width: 50%;
+  }
+}
+
+@media screen and (max-width:850px) {
+  .App{
+    min-width: 60%;
+  }
+}
+
+@media screen and (max-width:650px) {
+  .cards{
+    flex-direction: column;
+    text-align: center;
+  }
+
+
 }
